# app-inventory-generator

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
assets/: app-inventory-generator.desktop
assets/debian/: postinst
src/: generator.rs  main.rs  resolver.rs  scanner.rs  ui.rs
