[package]
name = "app-inventory-generator"
version = "1.0.0"
edition = "2021"
description = "Point-in-time Linux package inventory and install script generator"
authors = ["archerprojects <archer.projects@proton.me>"]
repository = "https://github.com/archerprojects/app-inventory-generator"
license = "GPL-3.0-or-later"

[[bin]]
name = "app-inventory-generator"
path = "src/main.rs"

[dependencies]
eframe = "0.34.2"
egui = "0.34.2"
tokio = { version = "~1.51", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[package.metadata.deb]
maintainer = "archerprojects <archer.projects@proton.me>"
copyright = "2026, archerprojects"
license-file = ["LICENSE", "4"]
extended-description = """\
App Inventory Generator scans your installed packages, lets you edit the list,
and generates an idempotent bash install script targeted at your chosen distro.
Developed for Lean Linux by archerprojects."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/app-inventory-generator", "usr/bin/", "755"],
    ["assets/app-inventory-generator.desktop", "usr/share/applications/", "644"],
    ["assets/icons/hicolor/16x16/apps/app-inventory-generator.png", "usr/share/icons/hicolor/16x16/apps/", "644"],
    ["assets/icons/hicolor/22x22/apps/app-inventory-generator.png", "usr/share/icons/hicolor/22x22/apps/", "644"],
    ["assets/icons/hicolor/24x24/apps/app-inventory-generator.png", "usr/share/icons/hicolor/24x24/apps/", "644"],
    ["assets/icons/hicolor/32x32/apps/app-inventory-generator.png", "usr/share/icons/hicolor/32x32/apps/", "644"],
    ["assets/icons/hicolor/48x48/apps/app-inventory-generator.png", "usr/share/icons/hicolor/48x48/apps/", "644"],
    ["assets/icons/hicolor/64x64/apps/app-inventory-generator.png", "usr/share/icons/hicolor/64x64/apps/", "644"],
    ["assets/icons/hicolor/128x128/apps/app-inventory-generator.png", "usr/share/icons/hicolor/128x128/apps/", "644"],
    ["assets/icons/hicolor/256x256/apps/app-inventory-generator.png", "usr/share/icons/hicolor/256x256/apps/", "644"],
    ["assets/icons/hicolor/scalable/apps/app-inventory-generator.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
    ["assets/icons/lean-icons/apps/scalable/app-inventory-generator.svg", "usr/share/icons/lean-icons/apps/scalable/", "644"],
]
maintainer-scripts = "assets/debian/"
